CRUNCH-308: A working version of Crunch against the HBase 0.96 APIs and Hadoop 2.2.0.